--- a/app/src/main/res/layout/mc_home_activity.xml
+++ b/app/src/main/res/layout/mc_home_activity.xml
@@ -12,10 +12,14 @@
         android:layout_height="match_parent"
         tools:context=".MCHomeActivity">
 
-        <TextView
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_hot_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello World!"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/login_graph"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
