--- a/app/src/main/res/layout/mc_home_activity.xml
+++ b/app/src/main/res/layout/mc_home_activity.xml
@@ -14,8 +14,8 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/nav_hot_fragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:text="Hello World!"
             android:name="androidx.navigation.fragment.NavHostFragment"
             app:defaultNavHost="true"
