[UPDATE] Comenzando diseño home

--- a/app/src/main/res/layout/mc_home_activity.xml
+++ b/app/src/main/res/layout/mc_home_activity.xml
@@ -16,10 +16,9 @@
             android:id="@+id/nav_hot_fragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="Hello World!"
             android:name="androidx.navigation.fragment.NavHostFragment"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/login_graph"
+            app:navGraph="@navigation/home_graph"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
