--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -70,6 +70,7 @@
                 android:id="@+id/tieEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
                 android:fontFamily="@font/roboto_bold"
                 android:hint="@string/txt_correo"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -82,6 +83,7 @@
             android:layout_marginTop="@dimen/margin_20"
             android:layout_marginStart="@dimen/margin_20"
             android:layout_marginEnd="@dimen/margin_20"
+            app:passwordToggleEnabled="true"
             app:layout_constraintTop_toBottomOf="@+id/tilEmail"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -90,6 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_bold"
+                android:inputType="textPassword"
                 android:hint="@string/txt_contrasenia"/>
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,18 +107,6 @@
             app:layout_constraintStart_toStartOf="@+id/tilPws"
             app:layout_constraintEnd_toEndOf="@+id/tilPws"/>
 
-        <TextView
-            android:id="@+id/tvForgotPws"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_bold"
-            android:text="@string/txt_forgot_pws"
-            android:textColor="@color/blue_dark_700"
-            android:textSize="@dimen/size_16"
-            android:layout_marginTop="@dimen/margin_16"
-            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-            app:layout_constraintEnd_toEndOf="@id/btnLogin"/>
-
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottieLogin"
             android:layout_width="wrap_content"
@@ -128,5 +119,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
+        <TextView
+            android:id="@+id/tvForgotPws"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_bold"
+            android:text="@string/txt_forgot_pws"
+            android:textColor="@color/blue_dark_700"
+            android:textSize="@dimen/size_16"
+            android:layout_marginTop="@dimen/margin_16"
+            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
+            app:layout_constraintEnd_toEndOf="@id/btnLogin"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
