--- a/features/home/src/main/res/layout/fragment_home.xml
+++ b/features/home/src/main/res/layout/fragment_home.xml
@@ -55,11 +55,143 @@
                 app:layout_constraintTop_toTopOf="@+id/imgUser"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
+            <LinearLayout
+                android:id="@+id/contentSaldo"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal|center_vertical"
+                app:layout_constraintTop_toBottomOf="@+id/tvSaldo"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="$"
+                    android:layout_marginTop="8dp"
+                    android:layout_gravity="top"
+                    style="@style/txtStatics"/>
+
+                <TextView
+                    android:id="@+id/txtPayMain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3,800"
+                    style="@style/txtPagoMain"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top"
+                    android:layout_marginTop="8dp"
+                    android:text=".00"
+                    style="@style/txtStatics"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:gravity="center_horizontal|center_vertical"
+                app:layout_constraintTop_toBottomOf="@+id/contentSaldo"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="$"
+                    android:layout_gravity="top"
+                    android:layout_marginTop="5dp"
+                    style="@style/txtStaticsSmall"/>
+
+                <TextView
+                    android:id="@+id/txtCostBoxMain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="30"
+                    style="@style/txtTitle_20"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=".00"
+                    android:layout_gravity="top"
+                    android:layout_marginTop="3dp"
+                    style="@style/txtStaticsSmall"/>
+
+            </LinearLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvEmployees"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_employee_working"
+            tools:itemCount="3"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.36" />
 
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/contentResumen"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="5dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginHorizontal="28dp"
+            android:background="@color/green_dark_700"
+            android:backgroundTint="@color/green_dark_200"
+            app:layout_constraintTop_toBottomOf="@+id/rvEmployees"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_marginEnd="57dp"
+                android:layout_height="match_parent"
+                app:cardElevation="5dp"
+                style="@style/CardViewSubMainStyle">
 
+            </com.google.android.material.card.MaterialCardView>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <TextView
+            android:id="@+id/tvMesesAnteriores"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Meses Anteriores"
+            style="@style/txtTitle_20"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/contentResumen"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvHistorialMesesMain"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="26dp"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_employee_working"
+            android:scrollbars="vertical"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:alpha="0.3"
+            app:layout_constraintTop_toBottomOf="@+id/tvMesesAnteriores"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
