--- a/features/home/src/main/res/layout/fragment_home.xml
+++ b/features/home/src/main/res/layout/fragment_home.xml
@@ -181,13 +181,12 @@
             android:id="@+id/rvHistorialMesesMain"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="@dimen/margin_15"
             tools:itemCount="3"
-            tools:listitem="@layout/item_employee_working"
+            tools:listitem="@layout/item_history_month"
             android:scrollbars="vertical"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:alpha="0.3"
             app:layout_constraintTop_toBottomOf="@+id/tvMesesAnteriores"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
