--- a/features/home/src/main/res/layout/item_history_month.xml
+++ b/features/home/src/main/res/layout/item_history_month.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -8,24 +9,31 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <com.tistory.zladnrms.roundablelayout.RoundableLayout
             android:id="@+id/roundableGraphic"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:backgroundColor="@color/purple_600"
+            android:layout_width="@dimen/width_50"
+            android:layout_height="@dimen/width_50"
+            app:backgroundColor="@color/white"
             app:cornerLeftSide="@dimen/corner_radius_17"
             app:cornerRightSide="@dimen/corner_radius_17"
             android:layout_marginTop="@dimen/margin_10"
             android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginStart="@dimen/margin_12"
             android:padding="@dimen/padding_10"
+            app:strokeLineColor="@color/green_dark_700"
+            app:strokeLineWidth="1dp"
+            android:elevation="@dimen/elevation_2"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
+
             <ImageView
-                android:id="@+id/imgStatus"
+                android:id="@+id/imvStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_good_graphic"
@@ -33,8 +41,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
+
             <ImageView
-                android:id="@+id/imgEquals"
+                android:id="@+id/imvEquals"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_equals"
@@ -49,12 +58,11 @@
 
         <TextView
             android:id="@+id/tvMonth"
-            style="@style/txtStaticsSmall"
+            style="@style/StyleTvTitleBlueDark_20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="Noviembre"
+            tools:text="Noviembre"
             android:textSize="@dimen/size_18"
             app:layout_constraintEnd_toStartOf="@+id/contentSaldoMonth"
             app:layout_constraintHorizontal_bias="0.0"
@@ -65,10 +73,8 @@
             android:id="@+id/tvQuantityCaj"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1066 C"
-            style="@style/txtStatics"
-            android:textColor="@color/blue_dark_700"
-            android:textSize="@dimen/size_16"
+            tools:text="1066 C"
+            style="@style/StyleTvLightBlueDark_16"
             app:layout_constraintTop_toBottomOf="@+id/tvMonth"
             app:layout_constraintStart_toStartOf="@+id/tvMonth"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -87,28 +93,26 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$"
+                android:text="@string/txt_peso_sign"
                 android:layout_marginTop="5dp"
                 android:layout_gravity="top"
                 android:textSize="@dimen/size_14"
-                style="@style/txtStatics"/>
+                style="@style/StyleTvLightPurple_16"/>
 
             <TextView
                 android:id="@+id/tvPayMain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3,800"
-                android:textSize="@dimen/size_22"
-                style="@style/txtPagoMain"/>
+                tools:text="3,800"
+                style="@style/StyleTvPurple_22"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:layout_marginTop="5dp"
-                android:text=".00"
-                android:textSize="@dimen/size_16"
-                style="@style/txtStatics"/>
+                android:text="@string/txt_zero_point"
+                style="@style/StyleTvLightPurple_16"/>
 
         </LinearLayout>
 
